# auxmem-starter

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  auxmem-cli  build_manifest.py  koinome-cli  pyproject.toml
.cursor/rules/: versioning-paused.mdc
.github/workflows/: shellcheck.yml  test.yml
auxmem/: __init__.py  cli.py  evaluation.py  exit_codes.py  import_atomic.py  importers.py  manifest.py  paths.py  scaffold.py  upgrade.py  version.py  wizard.py
auxmem/importers/: distill-seeds.md  export_obsidian.sh  migrate_obsidian.py  migrate_vault.py  restructure_export.py  seed_extract.py
auxmem/template/: .auxmem-manifest.json  AGENTS.md  GEMINI.md  README.md  bootstrap.sh
auxmem/template/.scripts/: auxmem-sync.sh  gen_mocs.py  graph_report.py  pre-commit  synthesis_status.py  validate_auxmem.py  validate_vault.py  vault-sync.sh  vault.config.json
auxmem/template/60-decisions/: adr-0001-auxmem-structure.md  index.md
auxmem/template/72-tasks/: todo.txt
auxmem/template/90-templates/: 1on1.md
auxmem/template/docs/: ARCHITECTURE.md  FIXING.md  OPERATIONS.md  SETUP.md  SYNTHESIS.md
docs/: COMPARISONS.md  COMPATIBILITY.md  EVALUATION.md  IMPORTING.md  MIGRATION.md  REBRAND-PLAN.md  RELEASE.md  STRATEGY.md  USAGE.md
docs/plans/closed/: rebrand-plan.md
docs/plans/open/: koinome-transform-plan.md
examples/: README.md  build_references.py
examples/consulting-engagement/: .auxmem-manifest.json  README.md
examples/consulting-engagement/.scripts/: auxmem.config.json  koinome-sync.sh  koinome-sync.systemd  koinome.config.json
examples/consulting-engagement/05-sources/: interview-cio-transcript.md  interview-ops-transcript.md
examples/consulting-engagement/60-decisions/: index.md  (+4 more)
examples/evaluation/: RESULTS.md  agent_prompts.md  scoring_rubric.md
examples/research-project/: .gitignore  AGENTS.md  GEMINI.md  README.md
examples/software-project/: .gitattributes  .gitignore  .koinome-manifest.json  README.md
importers/: distill-seeds.md  export_vault.sh  restructure_export.py
koinome/: __init__.py  cli.py  evaluation.py  exit_codes.py  importers.py  line_endings.py  manifest.py  paths.py  release_check.py  scaffold.py  upgrade.py  version.py  wizard.py
koinome/importers/: distill-seeds.md  seed_extract.py
koinome/template/: .gitattributes  .koinome-manifest.json
scripts/: apply_koinome_transform.py  apply_rebrand.py  check_pypi_registry.sh  check_release.sh  check_repo.sh  compatibility_smoke.sh  generate_logo.py  lint-shell.sh  smoke_install.sh  windows_ci_smoke.sh
template/: .auxmem-manifest.json  .gitattributes  .gitignore  AGENTS.md  README.md  bootstrap.sh  todo.txt
template/.scripts/: graph_report.py  pre-commit  validate_vault.py  vault-sync.systemd  vault.config.json
template/60-decisions/: adr-0001-vault-structure.md
template/docs/: ARCHITECTURE.md  OPERATIONS.md  SETUP.md
tests/: conftest.py  helpers.py  test_bootstrap.py  test_cli_smoke.py  test_conformance.py  test_doc_consistency.py  test_evaluation.py  test_exit_status.py  test_imports.py  test_koinome_migration.py  test_line_endings.py  test_manifest_freshness.py  test_naming_consistency.py  test_package_data.py  test_reference_auxmems.py  test_reference_corpora.py  test_release_check.py  test_release_policy.py  test_scaffold_validation.py  test_staged_snapshot.py  test_sync.py  test_upgrade.py  test_validator.py  test_versioning.py
(+145 files in other folders)
