[project]
name = "koinome"
version = "0.0.0alpha1"
description = "Koinome CLI: create and maintain provider-independent, agent-readable markdown corpora."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/gilmar/koinome"
Repository = "https://github.com/gilmar/koinome"
Documentation = "https://github.com/gilmar/koinome/blob/master/docs/USAGE.md"
Changelog = "https://github.com/gilmar/koinome/blob/master/CHANGELOG.md"

[project.scripts]
koinome = "koinome.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["koinome"]

[tool.setuptools.package-data]
koinome = [
  "template/**",
  "template/.koinome-manifest.json",
  "template/.gitignore",
  "template/.gitattributes",
  "template/.scripts/*",
  "template/.skills/*/SKILL.md",
  "template/.github/workflows/*",
  "importers/**",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"build_manifest.py" = ["E402"]
